# dioxus-demo

./: Cargo.toml  Dioxus.toml
src/: main.rs
src/components/: appbar.rs  input.rs  login_form.rs
src/pages/: login.rs
