[package]
name = "dioxus-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-logger = "0.4.1"
dioxus-web = "0.4.0"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
